--- a/src/index.scss
+++ b/src/index.scss
@@ -6,10 +6,17 @@
 :root,
 body,
 #app {
+	background-color: #fcf1e6;
 	font-family: Symbola, 'Times New Roman', serif;
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+	color: #0e021a;
+	margin: 0;
+}
+
+.material-symbols-sharp {
+	font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 48;
 }
 
 #functions {
@@ -19,22 +26,68 @@ body,
 	width: auto;
 	align-items: center;
 	justify-content: center;
-	& > input {
-		font-family: Symbola, 'Times New Roman', serif;
-		font-size: 24px;
-		flex-grow: 1;
-		padding: 4px;
-		border-radius: 5px;
-		border: 1.5px solid gray;
-		word-spacing: 0.1em;
-	}
+	background-color: #d8ccc0;
+	padding: 6px 4px;
+	box-shadow: 0px -6px 8px 8px #0e021a66;
 	& > * {
 		font-size: 1em;
-		margin: 6px;
+		margin: 0 6px;
+	}
+	& > MathfieldComponent {
+		font-family: Symbola, 'Times New Roman', serif;
+		font-size: 24px;
+		margin: 0 3px;
+		padding: 4px;
+		flex-grow: 1;
+		height: 1em;
+		border-radius: 0px;
+		border: 1.5px solid gray;
+		word-spacing: 0.1em;
+		background-color: #f7f5f3;
+		color: #48414e;
+		&:focus {
+			outline: none;
+			border: 1.5px solid black;
+			background-color: #ffffff;
+			color: #0e021a;
+		}
+		&:hover {
+			background-color: #ffffff;
+			color: #0e021a;
+		}
+		transition: all 0.2s ease;
+	}
+	& > button {
+		font-family: Symbola, 'Times New Roman', serif;
+		font-size: 24px;
+		padding: 4px;
+		border-radius: 0px;
+		border: 1.5px solid gray;
+		background-color: #87bb72;
+		color: #22172c;
+		&:focus {
+			outline: none;
+			border: 1.5px solid black;
+			background-color: #73d34d;
+			color: #0e021a;
+		}
+		&:hover {
+			background-color: #73d34d;
+			color: #0e021a;
+			cursor: pointer;
+		}
+		transition: all 0.1s ease;
+	}
+	& > #play-button {
+		background: none;
+		border: none;
+		padding: 0;
+		& > span {
+			font-size: 1.6em;
+		}
 	}
 }
 
 #canvas-container {
-	height: 100%;
-	flex-grow: 1;
+	flex: 1 1 50%;
 }
