--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,8 @@ body,
 	justify-content: center;
 	background-color: #d8ccc0;
 	padding: 6px 4px;
+	position: relative;
+	z-index: 1;
 	box-shadow: 0px -6px 8px 8px #0e021a66;
 	& > * {
 		font-size: 1em;
@@ -57,27 +59,6 @@ body,
 		}
 		transition: all 0.2s ease;
 	}
-	& > button {
-		font-family: Symbola, 'Times New Roman', serif;
-		font-size: 24px;
-		padding: 4px;
-		border-radius: 0px;
-		border: 1.5px solid gray;
-		background-color: #87bb72;
-		color: #22172c;
-		&:focus {
-			outline: none;
-			border: 1.5px solid black;
-			background-color: #73d34d;
-			color: #0e021a;
-		}
-		&:hover {
-			background-color: #73d34d;
-			color: #0e021a;
-			cursor: pointer;
-		}
-		transition: all 0.1s ease;
-	}
 	& > #play-button {
 		background: none;
 		border: none;
@@ -85,6 +66,73 @@ body,
 		& > span {
 			font-size: 1.6em;
 		}
+	}
+}
+
+.button {
+	font-family: Symbola, 'Times New Roman', serif;
+	font-size: 24px;
+	padding: 4px;
+	border-radius: 0px;
+	border: 1.5px solid gray;
+	background-color: #87bb72;
+	color: #22172c;
+	&:focus {
+		outline: none;
+		border: 1.5px solid black;
+		background-color: #73d34d;
+		color: #0e021a;
+	}
+	&:hover {
+		background-color: #73d34d;
+		color: #0e021a;
+		cursor: pointer;
+	}
+	transition: all 0.1s ease;
+}
+
+#container {
+	flex: 1 1 50%;
+	display: flex;
+}
+
+#settings {
+	display: flex;
+	flex-direction: column;
+	width: 20%;
+	padding: 12px;
+	background-color: #e7e1da;
+	position: relative;
+	z-index: 0;
+	box-shadow: -6px 0px 8px 8px #0e021a66;
+	& > input {
+		font-family: Symbola, 'Times New Roman', serif;
+		font-size: 24px;
+		margin: 2px;
+		padding: 4px;
+		height: 1em;
+		border-radius: 0px;
+		border: 1.5px solid gray;
+		word-spacing: 0.1em;
+		background-color: #f7f5f3;
+		color: #48414e;
+		&:focus {
+			outline: none;
+			border: 1.5px solid black;
+			background-color: #ffffff;
+			color: #0e021a;
+		}
+		&:hover {
+			background-color: #ffffff;
+			color: #0e021a;
+		}
+		transition: all 0.2s ease;
+	}
+	& > button {
+		margin: 2px;
+	}
+	& > label {
+		margin: 8px 2px 0 2px;
 	}
 }
 
